k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myerb-web
  namespace: myerb
spec:
  selector:
    app: myerb-web
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
