k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myerb
  namespace: myerb
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  rules:
    - host: myerb.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myerb-web
                port:
                  number: 80
